--- a/styles/_viewSchedule.scss
+++ b/styles/_viewSchedule.scss
@@ -159,7 +159,7 @@
 
 				top: (14.61*120px);
 				
-				border-top: 2px dotted $transparentwhite;
+				border-top: 2px dotted $lesstransparentwhite;
 			}
 		}
 		
