--- a/styles/_viewBarchart.scss
+++ b/styles/_viewBarchart.scss
@@ -83,9 +83,10 @@
 		.info, .patient, .barchart, .service	{
 			margin-bottom: 2rem;
 			margin-top: 2rem;
-			min-height: 4rem;
+			height: 4rem;
+			text-overflow: ellipsis;
 			
-			&:first-child	{
+			&:first-of-type	{
 				margin-top: $smallUnit;
 			}
 			
@@ -93,6 +94,8 @@
 				margin-bottom: $smallUnit;
 			}
 		}
+		
+		
 		
 		.info	{
 			width: $smallUnit*3;
@@ -180,7 +183,7 @@
 		
 		.barchart-bars	{
 			width: 100%;
-			height: 3rem;
+			height: 4rem;
 			
 			div	{
 				position: relative;
