Set patient or service height to max-height

--- a/styles/_viewBarchart.scss
+++ b/styles/_viewBarchart.scss
@@ -83,7 +83,7 @@
 		.info, .patient, .barchart, .service	{
 			margin-bottom: 2rem;
 			margin-top: 2rem;
-			height: 4rem;
+			min-height: 4rem;
 			text-overflow: ellipsis;
 			
 			&:first-of-type	{
