--- a/styles/_viewBarchart.scss
+++ b/styles/_viewBarchart.scss
@@ -160,7 +160,7 @@
 		}
 		
 		.now-top	{
-			border-left: 2px dotted $lesstransparentwhite;
+			border-left: 2px solid white;
 			z-index: 3;
 		}
 	}
