Change time by drag and drop (Experimental)

--- a/styles/_viewSchedule.scss
+++ b/styles/_viewSchedule.scss
@@ -334,12 +334,12 @@
 	
 	.handle-top	{
 		top: 0;
-		cursor: n-resize;
+		cursor: ns-resize;
 	}
 	
 	.handle-bottom	{
 		bottom: 0;
-		cursor: s-resize;
+		cursor: ns-resize;
 	}
 }
 
