--- a/styles/_viewBarchart.scss
+++ b/styles/_viewBarchart.scss
@@ -25,7 +25,7 @@
 			justify-content: center;
 			text-align: center;
 			align-items: center;
-			padding: 1rem 0;
+			padding: 0 1rem;
 		}
 		
 		.text-state-4, .text-state-6, .text-state-8, .text-state-10, .text-state-11	{
