--- a/styles/style.css
+++ b/styles/style.css
@@ -1276,7 +1276,7 @@ button.danger:hover, button.danger:focus {
   -webkit-align-items: center;
       -ms-flex-align: center;
           align-items: center;
-  padding: 1rem 0;
+  padding: 0 1rem;
 }
 .barchart .legend .text-state-4, .barchart .legend .text-state-6, .barchart .legend .text-state-8, .barchart .legend .text-state-10, .barchart .legend .text-state-11 {
   border-left: 1px solid #2c2e30;
