--- a/src/styles/_colors.scss
+++ b/src/styles/_colors.scss
@@ -33,6 +33,7 @@ $grey1: #5c5e60;
 $grey0: hsl(0,0,60);
 
 // Dark mode
+$grey7: hsl(210,5,7);
 $grey6: hsl(210,5,10);
 $grey5: hsl(210,5,12);
 $grey4: hsl(210,5,15);
