--- a/src/styles/_structure.scss
+++ b/src/styles/_structure.scss
@@ -5,6 +5,24 @@
 body  {
   width: 100vw;
   height: 100vh;
+
+  display: flex;
+  align-items: stretch;
+  flex-direction: column;
+}
+
+.titlebar {
+  background-color: $grey7;
+  height: 24px;
+  width: 100vw;
+  flex-shrink: 0;
+  text-align: center;
+  line-height: 26px;
+  border-bottom: 1px solid black;
+  user-select: none;
+  color: $grey0;
+  -webkit-app-region: drag;
+  -webkit-user-select: none;
 }
 
 .container	{
@@ -12,7 +30,8 @@ body  {
 	flex-direction: row;
 	align-items: stretch;
 	width: 100vw;
-	height: 100vh;
+	//height: 100vh;
+  overflow: hidden;
 }
 
 nav	{
@@ -117,7 +136,9 @@ nav	{
 	align-items: stretch;
 
 	width: 100%;
-	height: 100vh;
+
+  // Magic Numbers, to make the title bar fit in the electron window
+	height: (760px - 24px) * 1.115; //100vh;
 
 	.center-main	{
 		flex-grow: 1;
